[gd_scene load_steps=10 format=3 uid="uid://hb5jqo0vv4x3"]

[ext_resource type="Script" path="res://scenes/weapons/ranged/weapon_ranged.gd" id="1_wo71a"]
[ext_resource type="Texture2D" uid="uid://bgqscqcpm7vpp" path="res://scenes/weapons/ranged/gun sprite.png" id="2_1t4yi"]
[ext_resource type="AudioStream" uid="uid://c2rgro4hrmduo" path="res://scenes/weapons/ranged/hiss_noise.wav" id="2_31e3f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kro3"]
bg_color = Color(0, 0, 0, 0)
anti_aliasing_size = 4.37

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rgy5"]
bg_color = Color(0.631373, 0.176471, 0, 0.737255)
corner_detail = 1
anti_aliasing = false

[sub_resource type="Gradient" id="Gradient_1y2mp"]
offsets = PackedFloat32Array(0, 0.700637)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qegps"]
gradient = SubResource("Gradient_1y2mp")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_lakf4"]
max_value = 2.0
_data = [Vector2(0, 1.16008), 0.0, 0.0, 0, 0, Vector2(0.702771, 0.733848), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_uguv7"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.375315, 1.30941), 0.0, 0.0, 0, 0, Vector2(0.949622, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="RangedWeapon" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_wo71a")

[node name="WeaponSprite" type="Sprite2D" parent="."]
clip_children = 2
z_index = 4
z_as_relative = false
position = Vector2(2, 0)
texture = ExtResource("2_1t4yi")

[node name="ProgressBar" type="ProgressBar" parent="WeaponSprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -3.0
offset_right = -6.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6kro3")
theme_override_styles/fill = SubResource("StyleBoxFlat_7rgy5")
value = 45.56
fill_mode = 1
show_percentage = false

[node name="PointLight2D" type="PointLight2D" parent="WeaponSprite"]
position = Vector2(5, 0)
color = Color(0.878431, 0.384314, 0, 1)
energy = 0.0
texture = SubResource("GradientTexture2D_qegps")
texture_scale = 0.25

[node name="OrdinanceOrigin" type="Marker2D" parent="WeaponSprite"]
position = Vector2(7, 0)

[node name="OverheatHiss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_31e3f")

[node name="SteamParticles2" type="CPUParticles2D" parent="."]
position = Vector2(6, 1)
emitting = false
amount = 80
lifetime = 2.0
preprocess = 1.0
speed_scale = 3.0
randomness = 0.68
lifetime_randomness = 0.5
emission_shape = 4
emission_points = PackedVector2Array(-2, 0, 0, 0, 2, 0)
emission_colors = PackedColorArray()
direction = Vector2(1, 1)
spread = 0.0
gravity = Vector2(0, -40)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
radial_accel_min = -20.0
radial_accel_max = 20.0
tangential_accel_min = -40.0
tangential_accel_max = 40.0
damping_min = 10.0
damping_max = 30.0
scale_amount_min = 0.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_lakf4")
color = Color(1, 1, 1, 0.529412)

[node name="SteamParticles" type="CPUParticles2D" parent="."]
position = Vector2(6, -2)
rotation = 3.14159
emitting = false
amount = 80
lifetime = 2.0
preprocess = 1.0
speed_scale = 3.0
randomness = 0.68
lifetime_randomness = 0.5
emission_shape = 4
emission_points = PackedVector2Array(-2, 0, 0, 0, 2, 0)
emission_colors = PackedColorArray()
direction = Vector2(-1, 1)
spread = 0.0
gravity = Vector2(0, -40)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
radial_accel_min = -20.0
radial_accel_max = 20.0
tangential_accel_min = -40.0
tangential_accel_max = 40.0
damping_max = 20.0
scale_amount_min = 0.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_lakf4")
color = Color(1, 1, 1, 0.529412)

[node name="EjectParticles" type="CPUParticles2D" parent="."]
position = Vector2(9, 0)
emitting = false
amount = 10
lifetime = 0.2
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
local_coords = true
spread = 64.0
gravity = Vector2(0, 0)
initial_velocity_min = 65.42
initial_velocity_max = 65.42
scale_amount_min = 0.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_uguv7")
color = Color(1, 0.858491, 0.388979, 1)

[node name="OverheatTimer" type="Timer" parent="."]
